2013-06-27
Version 0.1.0
  - documented tdao::dbc package

2013-06-11
Version 0.1.0
  - tdbo re-written using pure tcl (no oo extensions needed)
  - sqlite, postgres and mariadb/mysql connectivity supported
  - documentation added in doctools format (needs further work)