@@ -1,6 +1,7 @@
 2013-06-27
 Version 0.1.0
   - documented tdao::dbc package
+  - implemented dao::exists and dao::delete metods
 
 2013-06-11
 Version 0.1.0
